[package]
name = "rust_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"
indicatif = "0.17.4"
reqwest = { version = "0.11.18", features = ["stream"] }
tokio = { version = "1.12.0", features = ["full"] }